tensorflow/2.0.0/api_docs/python/tf/math/bincount.md
<div itemscope itemtype="http://developers.google.com/ReferenceObject">
<meta itemprop="name" content="tf.math.bincount" />
<meta itemprop="path" content="Stable" />
</div>

# tf.math.bincount

``` python
tf.math.bincount(
    arr,
    weights=None,
    minlength=None,
    maxlength=None,
    dtype=tf.dtypes.int32,
    name=None
)
```



Defined in [`tensorflow/python/ops/math_ops.py`](/code/stable/tensorflow/python/ops/math_ops.py).

Counts the number of occurrences of each value in an integer array.

If `minlength` and `maxlength` are not given, returns a vector with length
`tf.reduce_max(arr) + 1` if `arr` is non-empty, and length 0 otherwise.
If `weights` are non-None, then index `i` of the output stores the sum of the
value in `weights` at each index where the corresponding value in `arr` is
`i`.

```python
values = tf.constant([1,1,2,3,2,4,4,5])
tf.math.bincount(values) #[0 2 2 1 2 1]
```
Vector length = Maximum element in vector `values` is 5. Adding 1, which is 6
                will be the vector length.

Each bin value in the output indicates number of occurrences of the particular
index. Here, index 1 in output has a value 2. This indicates value 1 occurs
two times in `values`.

```python
values = tf.constant([1,1,2,3,2,4,4,5])
weights = tf.constant([1,5,0,1,0,5,4,5])
tf.math.bincount(values, weights=weights) #[0 6 0 1 9 5]
```
Bin will be incremented by the corresponding weight instead of 1.
Here, index 1 in output has a value 6. This is the summation of weights
corresponding to the value in `values`.

#### Args:

* <b>`arr`</b>: An int32 tensor of non-negative values.
* <b>`weights`</b>: If non-None, must be the same shape as arr. For each value in
    `arr`, the bin will be incremented by the corresponding weight instead of
    1.
* <b>`minlength`</b>: If given, ensures the output has length at least `minlength`,
    padding with zeros at the end if necessary.
* <b>`maxlength`</b>: If given, skips values in `arr` that are equal or greater than
    `maxlength`, ensuring that the output has length at most `maxlength`.
* <b>`dtype`</b>: If `weights` is None, determines the type of the output bins.
* <b>`name`</b>: A name scope for the associated operations (optional).


#### Returns:

A vector with the same dtype as `weights` or the given `dtype`. The bin
values.


#### Raises:

`InvalidArgumentError` if negative values are provided as an input.